@@ -1657,16 +1657,11 @@
         "code": 22,
         "dataId": 2,
         "value": 0.04
-      },
-      {
-        "code": 25,
-        "dataId": 1,
-        "value": 1.5
       }
     ],
     "iconIndex": 1204,
     "name": "Hero Sword Replica",
-    "note": "<Weapon Image: 346>\n<Upgrade Slots: 3>\n\n<Synthesis Ingredients>\nSquire Sword\nCopper Sword\nSteel Sword\nBronze Sword\nShadowspec Sword\nBronze Greatsword\nSteel Greatsword\nSteel Axe\nUnstoppable Force\nTellurium Alloy\nTellurium Core\n</Synthesis Ingredients>\n<Mask Name: Legendary Blade Copy>",
+    "note": "<Weapon Image: 346>\n<Upgrade Slots: 3>\n\n<Element Amplify Fire: +50%>\n<Element Amplify Ice: +50%>\n<Element Amplify Electric: +50%>\n<Element Amplify Water: +50%>\n<Element Amplify Earth: +50%>\n<Element Amplify Wind: +50%>\n<Element Amplify Plant: +50%>\n<Element Amplify Metal: +50%>\n<Element Amplify Light: +50%>\n<Element Amplify Dark: +50%>\n\n<Synthesis Ingredients>\nSquire Sword\nCopper Sword\nSteel Sword\nBronze Sword\nShadowspec Sword\nBronze Greatsword\nSteel Greatsword\nSteel Axe\nUnstoppable Force\nTellurium Alloy\nTellurium Core\n</Synthesis Ingredients>\n<Mask Name: Legendary Blade Copy>",
     "params": [
       0,
       0,
@@ -1819,16 +1814,11 @@
         "code": 31,
         "dataId": 16,
         "value": 0
-      },
-      {
-        "code": 25,
-        "dataId": 1,
-        "value": 1.1
       }
     ],
     "iconIndex": 421,
     "name": "Tellurium Wand",
-    "note": "<Weapon Image: 258>\n<Upgrade Slots: 3>\n\n<Synthesis Ingredients>\nBronze Wand\nTellurium Alloy: 3\nTellurium Core\n</Synthesis Ingredients>\n<Mask Name: Alloy-Based Wand>",
+    "note": "<Weapon Image: 258>\n<Upgrade Slots: 3>\n\n<Element Amplify Fire: +10%>\n<Element Amplify Ice: +10%>\n<Element Amplify Electric: +10%>\n<Element Amplify Water: +10%>\n<Element Amplify Earth: +10%>\n<Element Amplify Wind: +10%>\n<Element Amplify Plant: +10%>\n<Element Amplify Metal: +10%>\n<Element Amplify Light: +10%>\n<Element Amplify Dark: +10%>\n\n<Synthesis Ingredients>\nBronze Wand\nTellurium Alloy: 3\nTellurium Core\n</Synthesis Ingredients>\n<Mask Name: Alloy-Based Wand>",
     "params": [
       0,
       22,
@@ -2039,16 +2029,11 @@
         "code": 21,
         "dataId": 1,
         "value": 1.1
-      },
-      {
-        "code": 25,
-        "dataId": 1,
-        "value": 1.1
       }
     ],
     "iconIndex": 1234,
     "name": "Tellurium Spellbook",
-    "note": "<Upgrade Slots: 3>\n\n<Custom Buy Show Eval>\nvisible = $gameSelfSwitches.value([201, 17, 'A']);\n</Custom Buy Show Eval>",
+    "note": "<Upgrade Slots: 3>\n\n<Element Amplify Fire: +10%>\n<Element Amplify Ice: +10%>\n<Element Amplify Electric: +10%>\n<Element Amplify Water: +10%>\n<Element Amplify Earth: +10%>\n<Element Amplify Wind: +10%>\n<Element Amplify Plant: +10%>\n<Element Amplify Metal: +10%>\n<Element Amplify Light: +10%>\n<Element Amplify Dark: +10%>\n\n<Custom Buy Show Eval>\nvisible = $gameSelfSwitches.value([201, 17, 'A']);\n</Custom Buy Show Eval>",
     "params": [
       0,
       300,
