@@ -78,7 +78,7 @@ var $plugins =
 {"name":"YEP_WeaponAnimation","status":true,"description":"v1.05 This plugin allows you to go past the standard\r\nweapon images and even using custom images.","parameters":{"Image Filepath":"img/weapons/","Image Smoothing":"true","Default Motion":"swing"}},
 {"name":"YEP_WeaponUnleash","status":true,"description":"v1.05 Replace the Attack command or give it the option of\r\nhave a skill randomly occur when using it!","parameters":{}},
 {"name":"--------------------","status":false,"description":"------------------------------------------------------------","parameters":{}},
-{"name":"YEP_StatusMenuCore","status":true,"description":"v1.04 Changes the Status menu for your characters into\na hub that displays more character information.","parameters":{"---Settings---":"","Command Order":"General Attributes Elements States Statistics","Command Window Width":"240","Command Window Rows":"4","Command Alignment":"center","---General---":"","General Command":"General","Parameters Text":"Stats","Experience Text":"Experience","Total Format":"Total %1 for Next %2","EXP Gauge Color 1":"30","EXP Gauge Color 2":"31","---Parameters---":"","Parameters Command":"Stats","Graph Text":"Stat Chart","ATK Color":"#ed1c24 #f26c4f","DEF Color":"#f7941d #fdc689","MAT Color":"#605ca8 #bd8cbf","MDF Color":"#448ccb #a6caf4","AGI Color":"#39b54a #82ca9c","LUK Color":"#fff568 #fffac3","---Resist Colors---":"","Above 300%":"10","200% to 300%":"20","150% to 200%":"14","100% to 150%":"6","Exactly 100%":"0","80% to 100%":"24","50% to 80%":"29","1% to 50%":"23","Exactly 0%":"31","Below 0%":"27","---Elements---":"","Elements Command":"Damage Types","Elements Decimal":"1","Element Column 1":"15 16 17 11 10","Element Column 2":"2 3 4 5 6 7 13 14 8 9","Element Column 3":"","Element Column 4":"","---States---":"","States Command":"States","States Decimal":"1","States Column 1":"21 94 20 22 149 23 36 39","States Column 2":"186 56 82 42 48 179 125 178","States Column 3":"7 102 8 89 52 33 162 88 165 163","States Column 4":"","---Attributes---":"","Attributes Command":"Attributes","Attribute Font Size":"20","Attribute Decimal":"1","Attributes Column 1":"hit eva cri cev mev mrf cnt hrg mrg","Attributes Column 2":"tgr grd rec pha mcr pdr mdr fdr exr","Attributes Column 3":"omd oed pls mls cls pms mms cms","Attributes Column 4":"","---XParam Names---":"","hit Name":"Hit Rate (HIT)","eva Name":"Evasion Rate (EVA)","cri Name":"Critical Hit Rate (CRI)","cev Name":"Critical Evasion Rate (CEV)","mev Name":"Magic Evasion Rate (MEV)","mrf Name":"Magic Reflect Rate (MRF)","cnt Name":"Counter Rate (CNT)","hrg Name":"HP Regen Rate (HRG)","mrg Name":"MP Regen Rate (MRG)","trg Name":"TP Regen Rate (TRG)","tgr Name":"Aggro Rate (AGR)","grd Name":"Guard Effect (GRD)","rec Name":"Recovery Effect (REC)","pha Name":"Pharmacology Effect (PHA)","mcr Name":"MP Cost Rate (MCR)","tcr Name":"TP Charge Rate (TCR)","pdr Name":"Physical Damage Rate (PDR)","mdr Name":"Magical Damage Rate (MDR)","fdr Name":"Floor Damage Rate (FDR)","exr Name":"Experience Rate (EXR)"}},
+{"name":"YEP_StatusMenuCore","status":true,"description":"v1.04 Changes the Status menu for your characters into\r\na hub that displays more character information.","parameters":{"---Settings---":"","Command Order":"General Attributes Elements States Statistics","Command Window Width":"240","Command Window Rows":"4","Command Alignment":"center","---General---":"","General Command":"General","Parameters Text":"Stats","Experience Text":"Experience","Total Format":"Total %1 for Next %2","EXP Gauge Color 1":"30","EXP Gauge Color 2":"31","---Parameters---":"","Parameters Command":"Stats","Graph Text":"Stat Chart","ATK Color":"#ed1c24 #f26c4f","DEF Color":"#f7941d #fdc689","MAT Color":"#605ca8 #bd8cbf","MDF Color":"#448ccb #a6caf4","AGI Color":"#39b54a #82ca9c","LUK Color":"#fff568 #fffac3","---Resist Colors---":"","Above 300%":"10","200% to 300%":"20","150% to 200%":"14","100% to 150%":"6","Exactly 100%":"0","80% to 100%":"24","50% to 80%":"29","1% to 50%":"23","Exactly 0%":"31","Below 0%":"27","---Elements---":"","Elements Command":"Damage Types","Elements Decimal":"1","Element Column 1":"15 16 17 11 10","Element Column 2":"2 3 4 5 6 7 13 14 8 9","Element Column 3":"","Element Column 4":"","---States---":"","States Command":"States","States Decimal":"1","States Column 1":"21 94 20 22 149 23 36 39","States Column 2":"186 56 82 42 48 179 125 178","States Column 3":"7 102 8 89 52 33 162 88 165 163","States Column 4":"","---Attributes---":"","Attributes Command":"Attributes","Attribute Font Size":"20","Attribute Decimal":"1","Attributes Column 1":"hit eva cri cev mev mrf cnt hrg mrg","Attributes Column 2":"tgr grd rec pha mcr pdr mdr fdr exr","Attributes Column 3":"omd pls mls cls pms mms cms","Attributes Column 4":"","---XParam Names---":"","hit Name":"Hit Rate (HIT)","eva Name":"Evasion Rate (EVA)","cri Name":"Critical Hit Rate (CRI)","cev Name":"Critical Evasion Rate (CEV)","mev Name":"Magic Evasion Rate (MEV)","mrf Name":"Magic Reflect Rate (MRF)","cnt Name":"Counter Rate (CNT)","hrg Name":"HP Regen Rate (HRG)","mrg Name":"MP Regen Rate (MRG)","trg Name":"TP Regen Rate (TRG)","tgr Name":"Aggro Rate (AGR)","grd Name":"Guard Effect (GRD)","rec Name":"Recovery Effect (REC)","pha Name":"Pharmacology Effect (PHA)","mcr Name":"MP Cost Rate (MCR)","tcr Name":"TP Charge Rate (TCR)","pdr Name":"Physical Damage Rate (PDR)","mdr Name":"Magical Damage Rate (MDR)","fdr Name":"Floor Damage Rate (FDR)","exr Name":"Experience Rate (EXR)"}},
 {"name":"YEP_X_BattleStatistics","status":true,"description":"v1.02 (Requires YEP_StatusMenuCore.js) Logs the battle\r\nstatistics of actors for your players to view.","parameters":{"---General---":"","Command Name":"Info","Battle Count Text":"Battles Initiated","Battle Count Format":"%1 out of %2 Battles (%3%)","---Ratio---":"","Kill Count Text":"Enemies Defeated","Kill Count Format":"%1 Enemies Defeated per Battle","Death Count Text":"Times Defeated","Death Count Format":"%1 Defeats per Battle","Assist Count Text":"Assists","Assist Count Format":"%1 Assists per Battle","---Totals---":"","Damage Dealt":"Damage Dealt","Damage Taken":"Damage Taken","Healing Dealt":"Healing Performed","Healing Taken":"Healing Received"}},
 {"name":"--------------------","status":false,"description":"------------------------------------------------------------","parameters":{}},
 {"name":"YEP_AutoPassiveStates","status":true,"description":"v1.17 This plugin allows for some states to function as\r\npassives for actors, enemies, skills, and equips.","parameters":{"---Basic---":"","Actor Passives":"0","Enemy Passives":"0","Global Passives":"0","---List---":"...Requires RPG Maker MV 1.5.0+...","Actor Passives List":"[\"42\",\"64\",\"87\",\"125\",\"128\",\"175\",\"301\",\"302\",\"303\",\"304\",\"305\",\"306\",\"307\",\"308\",\"309\",\"310\",\"311\",\"312\",\"313\",\"314\",\"315\",\"316\",\"317\",\"318\",\"319\",\"320\",\"321\",\"322\",\"323\",\"324\",\"325\",\"326\",\"327\",\"328\",\"329\",\"330\",\"331\",\"332\",\"333\",\"334\",\"335\",\"336\",\"337\",\"338\",\"339\",\"340\",\"341\",\"342\",\"343\",\"344\",\"345\",\"346\",\"347\",\"348\",\"349\",\"350\"]","Enemy Passives List":"[\"154\",\"155\",\"156\",\"157\",\"158\",\"159\",\"171\",\"172\",\"160\",\"161\",\"181\",\"182\",\"183\"]","Global Passives List":"[\"103\",\"104\",\"105\",\"106\",\"107\",\"108\",\"169\",\"170\",\"109\",\"110\"]"}},
