@@ -10,6 +10,7 @@ Additions:
  - The music menu is back!
 
 Changes:
+ - Removed Outgoing Elemental Damage in favor of just amplifying every element rate.
  - Reworked Attributes menu stat colorations.
  - Moved Fire Resistance Potion to buffs category.
 
